--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
+        
+        <script src="all.min.js"></script>
     </body>
 </html>
