Added styles task to gulp and stylesheet to index.html

--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,11 @@
         <title>ForRent Interview Exercise</title>
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300&subset=latin,latin-ext" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" href="all.min.css">
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
-        
+
         <script src="all.min.js"></script>
     </body>
 </html>
