Added app module and MainController.

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="app" ng-controller="MainController">
     <head>
         <meta charset="utf-8">
         <title>ForRent Interview Exercise</title>
@@ -9,6 +9,7 @@
         <link rel="icon" href="favicon.ico" type="image/x-icon">
     </head>
     <body>
+        <h1>ForRent Interview Exercise</h1>
         
         <script src="all.min.js"></script>
     </body>
