Added dictionary provider and basic usage. Misc fixes.

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>ForRent Interview Exercise</h1>
-        
+        <span>{{test}}</span>
         <script src="all.min.js"></script>
     </body>
 </html>
