DictProvider now maintains client side definition cache

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1>ForRent Interview Exercise</h1>
-        <span>{{test}}</span>
+        <span>{{test.definitions[0].text}}</span>
         <!-- inject:js -->
         <!-- endinject -->
     </body>
