Two partials implemented.

--- a/src/index.html
+++ b/src/index.html
@@ -21,30 +21,7 @@
                     <p>This app enables you to view definitions of several preloaded words and optionally load definitions of additional words if desired. All word definitions are pulled from <a href= "https://market.mashape.com/montanaflynn/dictionary" target="_blank">Mashape Dictionary API</a>.</p>
                 </div>
             </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">Words</div>
-                <div class="list-group">
-                    <a ng-repeat="worddef in vm.worddefs" href="#" class="list-group-item clearfix">
-                        {{worddef.word + ': ' + worddef.definitions[0].text}}
-                        <span class="pull-right">
-                            <span ng-click="vm.delWord($index)" class="glyphicon glyphicon-trash"></span>
-                        </span>
-                    </a>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-body">
-                    <div class="input-group">
-                        <input ng-model="vm.newWord" ng-enter="vm.define()" type="text" class="form-control" placeholder="Define another word...">
-                        <span class="input-group-btn">
-                            <button ng-click="vm.define()" class="btn btn-primary" type="button">Define</button>
-                        </span>
-                    </div>
-                    <div ng-show="vm.errorIsVisible" class="define-error alert alert-danger" role="alert">
-                        <button ng-click="vm.hideError()" type="button" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <strong>Uh oh!</strong> {{vm.errorMsg}}
-                    </div>
-                </div>
+            <div ng-view>
             </div>
         </div>
         <!--INJECTJS-->
