View fade animation implemented.

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,9 @@
                     <p>This app enables you to view definitions of several preloaded words and optionally load definitions of additional words if desired. All word definitions are pulled from <a href= "https://market.mashape.com/montanaflynn/dictionary" target="_blank">Mashape Dictionary API</a>.</p>
                 </div>
             </div>
-            <div ng-view>
+            <div style="position:relative">
+                <div class="animate-fade" ng-view>
+                </div>
             </div>
         </div>
         <!--INJECTJS-->
