--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <body>
         <nav class="navbar navbar-inverse">
             <div class="container">
-                <a class="navbar-brand" href="#">ForRent Interview Exercise <small>by Daniel Worsnup</small></a>
+                <a class="navbar-brand" href="#/">ForRent Interview Exercise</a>
             </div>
         </nav>
         <div class="container">
