--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading">About the App</div>
                 <div class="panel-body">
-                    <p>This app enables you to view definitions of several preloaded words and optionally load definitions of additional words if desired. All word definitions are pulled from <a href= "http://developer.pearson.com/apis/dictionaries" target="_blank">Pearson's Dictionaries API</a>.</p>
+                    <p>This app enables you to view definitions of several preloaded words and optionally load definitions of additional words if desired. All word definitions are pulled from <a href= "http://developer.pearson.com/apis/dictionaries" target="_blank">Pearson's Dictionaries API</a>. Written by Daniel Worsnup in partial fulfillment of the ForRent interview process.</p>
                 </div>
             </div>
             <div style="position:relative">
